@@ -1,23 +1,27 @@
-ThisBuild / version := "0.1.0-SNAPSHOT"
+name := "flink-playground"
 
-ThisBuild / scalaVersion := "2.12.15"
+version := "0.1"
 
-val flinkVersion = "1.13.2"
+scalaVersion := "2.12.20"
+
+val flinkVersion    = "1.20.1"
 val postgresVersion = "42.2.2"
-val logbackVersion = "1.2.10"
+val logbackVersion  = "1.2.10"
 
-lazy val root = (project in file("."))
-  .settings(
-    name := "flink-playground",
-    libraryDependencies := Seq(
-      "org.apache.flink" %% "flink-clients" % flinkVersion,
-      "org.apache.flink" %% "flink-scala" % flinkVersion,
-      "org.apache.flink" %% "flink-streaming-scala" % flinkVersion,
-      "org.apache.flink" %% "flink-connector-kafka" % flinkVersion,
-      "org.apache.flink" %% "flink-connector-cassandra" % flinkVersion,
-      "org.apache.flink" %% "flink-connector-jdbc" % flinkVersion,
-      "org.postgresql" % "postgresql" % postgresVersion,
-      "ch.qos.logback" % "logback-core" % logbackVersion,
-      "ch.qos.logback" % "logback-classic" % logbackVersion
-    )
-  )
+fork := true
+javaOptions += "--add-opens=java.base/java.util=ALL-UNNAMED"
+
+libraryDependencies ++= Seq(
+  "org.apache.flink"  % "flink-clients"             % flinkVersion,
+  "org.apache.flink" %% "flink-scala"               % flinkVersion,
+  "org.apache.flink" %% "flink-streaming-scala"     % flinkVersion,
+  "org.apache.flink"  % "flink-connector-kafka"     % "3.2.0-1.19",
+  "org.apache.flink" %% "flink-connector-cassandra" % "3.2.0-1.19",
+  "org.apache.flink"  % "flink-connector-jdbc"      % "3.2.0-1.19",
+  "org.postgresql"    % "postgresql"                % postgresVersion,
+  "ch.qos.logback"    % "logback-core"              % logbackVersion,
+  "ch.qos.logback"    % "logback-classic"           % logbackVersion
+)
+
+run / fork := true
+run / javaOptions += "--add-opens=java.base/java.util=ALL-UNNAMED"
